--- a/app/views/forums/edit.html.erb
+++ b/app/views/forums/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', forum: @forum %>
 
-<%= link_to 'Show', @forum %> |
-<%= link_to 'Back', forums_path %>
+<%= link_to 'Show', @forum %> |<%= link_to 'Back', forums_path %>
