--- a/app/views/home/gmap.html.erb
+++ b/app/views/home/gmap.html.erb
@@ -1,6 +1,6 @@
 <title>Google maps API</title>
 <h1>Google Maps</h1>
-<div class="jumbotron" data-controller="googlemap">
+<div class="jumbotron1" data-controller="googlemap">
       <div class="container">
             <form class="form-horizontal">
                   <div class = "form-group">
@@ -17,7 +17,7 @@
                   </div>
             </form>
             <div class= "continer-fluid">
-                  <div id='map-g' data-googlemap-target="gmaps" data-action="Events@document->googlemap#initMap" ></div>
+                  <div class='map-g' data-googlemap-target="gmaps" data-action="Events@document->googlemap#initMap" ></div>
 
             </div>
             <div class = "output" data-googlemap-target = "output">
