--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,14 +1,14 @@
 
-<%= simple_form_for(Message.new, class: "row g-3") do |f| %>
+<%= simple_form_for(Message.new, class: "row g-3", id: "m_form") do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
   <%= f.association :room, :as => :hidden,  :input_html => { :value => @room.id }%>
  <div class= "row g-3">
   <div class="col-auto">
-   <%= f.input :content , label: false, :input_html => { :class => "form-control",:placeholder => "Type here..."} %>
+   <%= f.input :content , label: false, :input_html => { :class => "form-control", :placeholder => "Type here..." , :id => "text_box"} %>
   </div>
-  <div class='col-auto'>
-   <%= f.button :submit, class: "btn btn-primary mb-3" %>
+  <div class='col-auto' >
+   <%= f.button :submit, class: "btn btn-primary mb-3", :id => "message_button"%>
   </div>
   </div>
   
