--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -8,6 +8,6 @@
   </div>
 
   <div class="form-actions ">
-    <%= f.button :submit, class: "btn btn-primary btn-block"%>
+    <%= f.button :submit , class: "btn btn-primary btn-block", value: "New Chat" %>
   </div>
 <% end %>
