--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
      <script
      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-TJwbVJvJa5FiQb7TtWMGLpmpawrQwjc&callback=initMapEvent&libraries=places&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=#{$ggl_api_key}&callback=initMapEvent&libraries=places&v=weekly"
       async 
     ></script>
   
