--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,13 +14,11 @@
  *= require_self
  */
 
-@import "./actiontext.scss";
+/* @import "./actiontext.scss";
 @import "font-awesome";
 @import "aboutus_new";
-<<<<<<< HEAD
 @import "footer";
-=======
 @import "footer";
 @import "rooms.scss";
-@import "gmaps.scss";
->>>>>>> ionut
+@import "gmaps.scss"; */
+
