--- a/app/assets/stylesheets/navbar1.scss
+++ b/app/assets/stylesheets/navbar1.scss
@@ -9,14 +9,16 @@ body{
     overflow-x: hidden;
 }
 nav{
-    height: 6rem;
+    
     width: 100vw;
     background-color: #3e3e3e;
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
     display: flex;
     position: fixed;
     z-index: 10;
-
+    margin-left: -19px;
+    margin-bottom: 20px;
+    
 }
 
 /*Styling logo*/
