styled contact us page

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -10,7 +10,7 @@
       <div class="screen-body">
         <div class="screen-body-item">
           <div class="app-title">
-          <span style="color:yellow">Create New Forum</span>
+          <span style="color:yellow">Create New Chat</span>
         </div>
         <br>
           <div class="app-form">
