--- a/app/views/shared/_navbar1.html.erb
+++ b/app/views/shared/_navbar1.html.erb
@@ -14,7 +14,7 @@
         <li1><a href="/forums">Forum</a></li1>
         <li1><a href="/rooms">Chat</a></li1>
         <li1><a href="/aboutus_new">About Us</a></li1>
-        <li1><a href="#">Contact Us</a></li1>
+        <li1><a href="/contact us">Contact Us</a></li1>
         <% if user_signed_in? %>
             <button class="join-button" type="submit" >
             <li2><%= link_to "Profile", edit_user_registration_path %></li2>
