--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,26 +1,31 @@
-<h1 class="page_title">Say hello!</h1>
-
-  <div class="skinny_wrapper wrapper_padding">
-    <%= form_for @contact do |f| %>
-      <%= f.label :name %><br>
-      <%= f.text_field :name, required: true %>
-
-      <br>
-
-      <%= f.label :email %><br>
-      <%= f.text_field :email, required: true %>
-
-      <br>
-
-      <%= f.label :message %><br>
-      <%= f.text_area :message, as: :text %>
-
-      <div class="hidden">
-        <%= f.label :nicname %><br>
-        <%= f.text_field :nickname, hint: 'Leave this field blank' %>
+<%= form_for @contact do |f| %>
+<div class="background">
+  <div class="container">
+    <div class="screen">
+      <div class="screen-body">
+        <div class="screen-body-item left">
+          <div class="app-title">
+            <span style="color:yellow">CONTACT US</span>
+          </div>
+        </div>
+        <div class="screen-body-item">
+          <div class="app-form">
+            <div class="app-form-group">
+              <%=f.label :name ,class: "app-subhead" %><br /><%= f.text_field :name,class: "form-control",placeholder: "Name", autofocus: true, autocomplete: "name" %>
+            </div>
+            <div class="app-form-group">
+             <%= f.label :email,class: "app-subhead"  %><br /><%= f.email_field :email,class: "form-control",placeholder: "Email", autofocus: true, autocomplete: "email" %>
+            </div>
+            <div class="app-form-group">
+              <%=f.label :message ,class: "app-subhead" %><br /><%= f.text_area :message,class: "form-control",placeholder: "message", autofocus: true, autocomplete: "message" %>
+            </div>
+              <button class="app-form-button" ><div class="actions"><%= f.submit "Send Message", class:"app-form-button" %></div></button>
+              <% end %>
+          </div>
+        </div>
       </div>
-
-      <%= f.submit 'Send Message', class: "button" %>
-
-    <% end %>
+    </div>
   </div>
+</div>
+
+  
