--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Comment:</strong>
+  <!-- <strong>Comment:</strong> -->
   <%= @comment.comment %>
 </p>
 
