--- a/app/views/home/aboutus_new.html.erb
+++ b/app/views/home/aboutus_new.html.erb
@@ -51,7 +51,7 @@
         <div class="one" >
           <p class="tag-line">FIREFLY</p>
           <h1 class="title">We are a cluster of firefly, light your way</h1>
-          <p class="page-description">Our product will arrive as a Web-based Application with the primary focus on solving youth-
+          <p class="page-description" >Our product will arrive as a Web-based Application with the primary focus on solving youth-
   related violence and, in particular, crimes concerning sharp instruments. The application will
   provide tools to assist users in identifying high-risk areas on an interactive map, communicating
   and sharing their location with other parties, or asking for help in an emergency.</p>
@@ -66,8 +66,8 @@
         <div class="next-section three">
           <p>About us</p>
           <div class="next-watch">
-            <p>Start</p>
-            <i class="material-icons md-18 green">arrow_forward</i>
+            <p>Firefly</p>
+            <!-- <i class="material-icons md-18 green">arrow_forward</i> -->
           </div>
           <img class="img-small-two" src="/assets/hope.jpeg" alt="">
         </div>
@@ -97,223 +97,7 @@
 
 
     <div class="film">
-      <section class="team" class="container reveal fade-bottom" style="background-image: linear-gradient(180deg, rgba(0,0,0,.3), orange)";>
-       <div class="container1">
 
-               <div class="card-wrapper">
-
-                 <div class="card">
-
-                   <div class="card-image">
-                     <img src="https://image.ibb.co/dUTfmJ/profile_img.jpg" alt="profile one">
-                   </div>
-
-                 <ul class="social-icons">
-                   <li>
-                     <a href="">
-                       <i class="fab fa-facebook-f"></i>
-                     </a>
-                   </li>
-                   <li>
-                     <a href="">
-                       <i class="fab fa-instagram"></i>
-                     </a>
-                   </li>
-                   <li>
-                     <a href="">
-                       <i class="fab fa-twitter"></i>
-                     </a>
-                   </li>
-                   <li>
-                     <a href="">
-                       <i class="fab fa-dribbble"></i>
-                     </a>
-                   </li>
-                 </ul>
-
-                 <div class="details">
-                   <h2>Ionut
-                     <br>
-                     <span class="job-title">Project Manager</span>
-                   </h2>
-                 </div>
-               </div>
-             </div><!-- end box wrapper -->
-            </div><!-- END container -->
-
-            <div class="container1">
-
-                 <div class="card-wrapper">
-
-                   <div class="card">
-
-                     <div class="card-image">
-                       <img src="https://image.ibb.co/dUTfmJ/profile_img.jpg" alt="profile one">
-                     </div>
-
-                   <ul class="social-icons">
-                     <li>
-                       <a href="">
-                         <i class="fab fa-facebook-f"></i>
-                       </a>
-                     </li>
-                     <li>
-                       <a href="">
-                         <i class="fab fa-instagram"></i>
-                       </a>
-                     </li>
-                     <li>
-                       <a href="">
-                         <i class="fab fa-twitter"></i>
-                       </a>
-                     </li>
-                     <li>
-                       <a href="">
-                         <i class="fab fa-dribbble"></i>
-                       </a>
-                     </li>
-                   </ul>
-
-                   <div class="details">
-                     <h2>Taimoor
-                       <br>
-                       <span class="job-title">Back-end leader</span>
-                     </h2>
-                   </div>
-                 </div>
-               </div><!-- end box wrapper -->
-              </div><!-- END container -->
-
-              <div class="container1">
-
-                   <div class="card-wrapper">
-
-                     <div class="card">
-
-                       <div class="card-image">
-                         <img src="https://image.ibb.co/dUTfmJ/profile_img.jpg" alt="profile one">
-                       </div>
-
-                     <ul class="social-icons">
-                       <li>
-                         <a href="">
-                           <i class="fab fa-facebook-f"></i>
-                         </a>
-                       </li>
-                       <li>
-                         <a href="">
-                           <i class="fab fa-instagram"></i>
-                         </a>
-                       </li>
-                       <li>
-                         <a href="">
-                           <i class="fab fa-twitter"></i>
-                         </a>
-                       </li>
-                       <li>
-                         <a href="">
-                           <i class="fab fa-dribbble"></i>
-                         </a>
-                       </li>
-                     </ul>
-
-                     <div class="details">
-                       <h2>Jun
-                         <br>
-                         <span class="job-title">Front-end leader</span>
-                       </h2>
-                     </div>
-                   </div>
-                 </div><!-- end box wrapper -->
-                </div><!-- END container -->
-
-                <div class="container1">
-
-                     <div class="card-wrapper">
-
-                       <div class="card">
-
-                         <div class="card-image">
-                           <img src="https://image.ibb.co/dUTfmJ/profile_img.jpg" alt="profile one">
-                         </div>
-
-                       <ul class="social-icons">
-                         <li>
-                           <a href="">
-                             <i class="fab fa-facebook-f"></i>
-                           </a>
-                         </li>
-                         <li>
-                           <a href="">
-                             <i class="fab fa-instagram"></i>
-                           </a>
-                         </li>
-                         <li>
-                           <a href="">
-                             <i class="fab fa-twitter"></i>
-                           </a>
-                         </li>
-                         <li>
-                           <a href="">
-                             <i class="fab fa-dribbble"></i>
-                           </a>
-                         </li>
-                       </ul>
-
-                       <div class="details">
-                         <h2>Dingyu
-                           <br>
-                           <span class="job-title">Front-end member</span>
-                         </h2>
-                       </div>
-                     </div>
-                   </div><!-- end box wrapper -->
-                  </div><!-- END container -->
-
-                  <div class="container1">
-
-                       <div class="card-wrapper">
-
-                         <div class="card">
-
-                           <div class="card-image">
-                             <img src="https://image.ibb.co/dUTfmJ/profile_img.jpg" alt="profile one">
-                           </div>
-
-                         <ul class="social-icons">
-                           <li>
-                             <a href="">
-                               <i class="fab fa-facebook-f"></i>
-                             </a>
-                           </li>
-                           <li>
-                             <a href="">
-                               <i class="fab fa-instagram"></i>
-                             </a>
-                           </li>
-                           <li>
-                             <a href="">
-                               <i class="fab fa-twitter"></i>
-                             </a>
-                           </li>
-                           <li>
-                             <a href="">
-                               <i class="fab fa-dribbble"></i>
-                             </a>
-                           </li>
-                         </ul>
-
-                         <div class="details">
-                           <h2>Kez
-                             <br>
-                             <span class="job-title">Front-end member</span>
-                           </h2>
-                         </div>
-                       </div>
-                     </div><!-- end box wrapper -->
-                    </div><!-- END container -->
-
-  </section>
 
 
 
@@ -335,7 +119,7 @@
                     <h3 class="card-text">Purpose</h3>
                     <br>
                     <br>
-                    <p class="card-text">Our product will arrive as a Web-based Application with the primary focus on solving youth-
+                    <p class="card-text1">Our product will arrive as a Web-based Application with the primary focus on solving youth-
   related violence and, in particular, crimes concerning sharp instruments. The application will
   provide tools to assist users in identifying high-risk areas on an interactive map, communicating
   and sharing their location with other parties, or asking for help in an emergency.</p>
@@ -351,7 +135,7 @@
                     <h3 class="card-text">SOS</h3>
                     <br>
                     <br>
-                    <p class="card-text">objective is to build a sustainable and real-time safety network through tools such as
+                    <p class="card-text1">Objective is to build a sustainable and real-time safety network through tools such as
   live chat, web forums, and maps. An implementation of an SOS button will enable the police to
   obtain the specific location of the user efficiently. Hence, increasing the probability of a user
   rescue in the event of a crime.</p>
@@ -367,7 +151,7 @@
                     <h3 class="card-text">Danger erea</h3>
                     <br>
                     <br>
-                    <p class="card-text">Our project will be delivered to help individuals to be acquainted with the increasing knife crime
+                    <p class="card-text1">Our project will be delivered to help individuals to be acquainted with the increasing knife crime
   in our community. It is evident that people are aware that there is an increase in knife crime in
   our day-to-day lives. They have come to adhere to the fact that such a crime is now common,
   which has caused some to overlook it.</p>
@@ -385,32 +169,21 @@
                     <small class="text-uppercase" style="color: #9B5DE5;">About us</small>
                     <h1 class="h2 mb-4" style="font-weight: 600;">About Our <span style="color: #9B5DE5;">Future</span></h1>
                     <h4>Potential scope and financial constraint:</h4>
-            <p class="text-secondary" style="line-height: 2;">1. Develop into an IOS and/or Android Application.</p>
+                    <br>
+                    <br>
+
+            <p class=" text_color" style="line-height: 2;">1. Develop into an IOS and/or Android Application.</p>
             <br>
-            <p class="text-secondary" style="line-height: 2;">2. Communicate the last known location in case of system shutdown.</p>
+            <p class=" text_color"style="line-height: 2;">2. Communicate the last known location in case of system shutdown.</p>
             <br>
-            <p class="text-secondary" style="line-height: 2;">3. To scale the application we need a premium subscription for databases </p>
+            <p class=" text_color" style="line-height: 2;">3. To scale the application we need a premium subscription for databases </p>
             <br>
-            <p class="text-secondary" style="line-height: 2;">4. Certain API integration for a commercial scale will require a premium price </p>
+            <p class=" text_color" style="line-height: 2;">4. Certain API integration for a commercial scale will require a premium price </p>
             <br>
-            <p class="text-secondary" style="line-height: 2;">5. On a larger scale security considerations increase, hence we would look at integrating with </p>
+            <p class=" text_color" style="line-height: 2;">5. On a larger scale security considerations increase, hence we would look at integrating with third-party security providers and increasing our workforce. </p>
             <br>
-            <p class="text-secondary" style="line-height: 2;">third-party security providers and increasing our workforce.</p>
-                    <a href="#" style="background-color: #9B5DE5; width: 240px;" class="btn px-4 py-3 mt-4 text-white d-flex align-items-center justify-content-between">
-                      <span>Download Profile</span>
-                      <svg width="25px" fill="currentColor" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                         viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve">
-                      <g>
-                        <g>
-                          <path d="M329.2,327.2c-4.5,0-8.1,3.4-8.6,7.9c-3.9,38.6-36.5,68.7-76.2,68.7c-39.6,0-72.2-30.1-76.2-68.7
-                            c-0.5-4.4-4.1-7.9-8.6-7.9h-104c-21.8,0-39.5,17.7-39.5,39.5v82.8c0,21.8,17.7,39.5,39.5,39.5h377.8c21.8,0,39.5-17.7,39.5-39.5
-                            v-82.7c0-21.8-17.7-39.5-39.5-39.5H329.2V327.2z"/>
-                          <path d="M303.5,198.6l-30.9,30.9V28.1C272.6,12.6,260,0,244.5,0l0,0c-15.5,0-28.1,12.6-28.1,28.1v201.4l-30.9-30.9
-                            c-9.5-9.5-24.7-11.9-35.9-4.4c-15.3,10.2-16.8,31.1-4.5,43.4l82.8,82.8c9.2,9.2,24.1,9.2,33.3,0l82.8-82.8
-                            c12.3-12.3,10.8-33.2-4.5-43.4C328.2,186.6,313,189,303.5,198.6z"/>
-                        </g>
-                      </svg>
-                    </a>
+            <p class=" text_color" style="line-height: 2;"></p>
+
                   </div>
                   <div class="col-md-6 text-center">
                     <div class="row">
