--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,4 +1,10 @@
+<style media="screen">
+  .btn-block{
+    transform:translateX(270%);
 
+  }
+
+</style>
 <%= simple_form_for(Room.new) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
