--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,11 +1,17 @@
+<style media="screen">
+  .col-sm-6{
+    transform:translateX(30%);
+  }
+</style>
 <div id = "user-id" data-user-id="<%= current_user.id %>"></div>
 <div id = "room-id" data-room-id="<%= @room.try(:id) %>"></div>
 
 <div class= "container-fluid">
   <div class="row">
-    <div class="card-body">
-      <small>Logged in as <%= current_user.firstname%></small></br>
+    <div class="">
+      <small>Logged in as <%= current_user.firstname%></small>
     </div>
+
     <div class="col-sm-6" style= " width: 25%">
       <div class="card">
         <div class="card-body">
@@ -30,22 +36,22 @@
       <% if @room.present? %>
         <div class="card my_scroll_card">
           <div class="card-header"><%= @room.name %></div>
-            
+
             <% @room.messages.each do |message| %>
-              
+
              <br><%= render('shared/message', message: message)%><br>
-              
-          <% end %> 
+
+          <% end %>
           <div id = 'messages' class="mes"></div>
-         
-          
+
+
         </div>
         <div class="card-body input_message">
-              
+
               <%= render 'messages/form', message: Message.new, room: @room %>
-      
+
         </div>
-        
+
       <% end %>
     </div>
   </div>
@@ -58,4 +64,3 @@
 </div>
 min 56
 -->
-    
