--- a/app/assets/stylesheets/mapscreen.css
+++ b/app/assets/stylesheets/mapscreen.css
@@ -12,13 +12,13 @@
 /* Control the left side */
 .left1 {
   left: 0;
-  background-color: #111;
+  /* background-color: #111; */
 }
 
 /* Control the right side */
 .right {
   right: 0;
-  background-color: red;
+  /* background-color: red; */
 }
 
 /* If you want the content centered horizontally and vertically */
@@ -31,7 +31,3 @@
 }
 
 /* Style the image inside the centered container, if needed */
-.centered img {
-  width: 150px;
-  border-radius: 50%;
-}
