mappage need to be separated  and need to fix the bug of right side

--- a/app/views/home/gmap.html.erb
+++ b/app/views/home/gmap.html.erb
@@ -1,11 +1,11 @@
 <style media="screen">
-  #map{
-    width:800px;
-  }
+
 </style>
 <title>Google maps API</title>
 <h1>Google Maps</h1>
-<section>
+
+
+<section class ="map_s">
   <div class="jumbotron1" data-controller="googlemap">
     <div class="split left1">
       <div class="centered">
@@ -33,18 +33,21 @@
 
     </div>
 
-    <div class="split right">
-    <div class="centered">
+  <div class="split1 right">
+  <div class="centered">
 
 
-
-            <div class = "output" data-googlemap-target = "output">
-            </div>
-            <div class = "rightPanel" data-googlemap-target = "rightPanel">
-            </div>
+    <div class="gmap_o">
+      <div class = "output" data-googlemap-target = "output">
+      </div>
+      <div class = "rightPanel" data-googlemap-target = "rightPanel">
+      </div>
 
     </div>
 
   </div>
-  </div>
+
+
+ </div>
+</div>
 </section>
