--- a/app/assets/stylesheets/mapscreen.css
+++ b/app/assets/stylesheets/mapscreen.css
@@ -1,6 +1,6 @@
 /* Split the screen in half */
 .split {
-  height: 100%;
+  height: 110%;
   width: 50%;
   position: fixed;
   z-index: 1;
@@ -9,15 +9,35 @@
   padding-top: 20px;
 }
 
+.split1 {
+  height: 170%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.map_s{
+  padding-bottom: 400px;
+}
+.map-g{
+  width: 700px;
+  height: 400px;
+}
 /* Control the left side */
 .left1 {
-  left: 0;
+   padding-bottom: 100px;
   /* background-color: #111; */
 }
 
 /* Control the right side */
 .right {
-  right: 0;
+  right: 20px;
+  margin-top: 200px;
+
+  padding-bottom: 100px;
   /* background-color: red; */
 }
 
@@ -29,5 +49,9 @@
   transform: translate(-50%, -50%);
   text-align: center;
 }
+.output{
+  height: 200px;
+}
+
 
 /* Style the image inside the centered container, if needed */
