--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -29,7 +29,9 @@ body, button, input {
   padding: 10px;
 
 }
-
+.container_custom_chat{
+  width: auto;
+}
 .screen {
   position: relative;
   background: #3e3e3e;
