--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -11,7 +11,7 @@
 
 
   <div class="background">
-  <div class="container">
+  <div class="container container_custom_chat">
     <div class="screen">
       <div class="screen-body">
         <div class="screen-body-item">
