--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -6,13 +6,13 @@
 <div id = "user-id" data-user-id="<%= current_user.id %>"></div>
 <div id = "room-id" data-room-id="<%= @room.try(:id) %>"></div>
 
-<div class= "container-fluid">
+<div class= "container-fluid container_custom">
   <div class="row">
     <div class="">
       <small>Logged in as <%= current_user.firstname%></small>
     </div>
-
-    <div class="col-sm-6" style= " width: 25%">
+    
+    <div class="col-sm-6" style= " width: 50%">
   
           <%= render 'form', room: Room.new %>
           <h3> CHATS </h3>
