--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -12,7 +12,7 @@
       <small>Logged in as <%= current_user.firstname%></small>
     </div>
     
-    <div class="col-sm-6" style= " width: 50%">
+    <div class="col-sm-6" style= " width: 50%; transform: translateX(0%);">
   
           <%= render 'form', room: Room.new %>
           <h3> CHATS </h3>
