updated chat page 1

--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -38,7 +38,7 @@
   <div class="blog-card">
     <div class="meta">
 
-      <div class="photo" style="background-image: url(<%= "assets/"+forum.imageurl %>)"></div>
+      <div class="photo" style="background-image: url(<%=asset_path @forum.imageurl%>)"></div>
       <ul class="details">
         <li class="tags">
           <ul>
