--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript">
+  !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
+  (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
+  f.async=1,f.src=d,g.parentNode.insertBefore(f,g),h=a.onerror,a.onerror=function(b,c,d,f,g){
+  h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({
+  e:g})}}(window,document,"script","//cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
+  </script>
+  <script type="text/javascript">
+  rg4js('apiKey', 'Lr5Eqxwz68YtMUIVeug0EA');
+  rg4js('enablePulse', true);
+</script>
     <title>Firefly</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -14,7 +25,7 @@
 
      <script
      defer
-      src="https://maps.googleapis.com/maps/api/js?key=#{$ggl_api_key}&callback=initMapEvent&libraries=places&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_KEY"] %>&callback=initMapEvent&libraries=places&v=weekly"
       async 
     ></script>
   
