added privacy policy

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -57,11 +57,12 @@
   <div class="text-center " >
 
   <a href="" style="color:black" class="Copyright">© 2022 Copyright:   Firefly.com</a>
+  
   </div>
       </section>
     </div>
 
-
+      <li1><a href="/privacy" style="color:black" class="Copyright">Privacy Policy</a></li1>      
       <!-- Copyright -->
 
     </footer>
